fix(rule not specified): make the h1 heading invisible

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
   text-align: right;
 }
 
+.main-title {
+  display: none;
+}
+
 .aaa .img {
   width: 100%;
 }
